--- a/index.html
+++ b/index.html
@@ -11,29 +11,35 @@
     <body>
         <article class="hud-container">
                 <section class="p1-container">
-                    <p class="p1 icon">🍌</p>
-                    <p class="p1 wins">0 wins</p>
+                    <p class="p1-icon">🍌</p>
+                    <p class="p1-wins">0 wins</p>
                 </section>
                 <section class="message-container">
                     <p class="message">It's 🍌's turn</p>
                 </section>
                 <section class="p2-container">
-                    <p class="p1 icon">🔥</p>
-                    <p class="p1 wins">0 wins</p>
+                    <p class="p2-icon">🔥</p>
+                    <p class="p2-wins">0 wins</p>
                 </section>
         </article>
-        <article class="game-container">
+        <article class="tic-tac-toe-container">
             <div class="left-wing"></div>
-            <section class="tic-tac-toe-container">
-                <article class="a1"></article>
-                <article class="a2"></article>
-                <article class="a3"></article>
-                <article class="b1"></article>
-                <article class="b2"></article>
-                <article class="b3"></article>
-                <article class="c1"></article>
-                <article class="c2"></article>
-                <article class="c3"></article>
+            <section class="tic-tac-toe-grid">
+                <div class="break">
+                    <article class="a1"></article>
+                    <article class="a2"></article>
+                    <article class="a3"></article>
+                </div>
+                <div class="break">
+                    <article class="b1"></article>
+                    <article class="b2"></article>
+                    <article class="b3"></article>
+                </div>
+                <div class="break">
+                    <article class="c1"></article>
+                    <article class="c2"></article>
+                    <article class="c3"></article>
+                </div>
             </section>
             <div class="right-wing"></div>
         </article>
