fix: Update MVP JavaScript functionality and associated html architecture, css style properties

--- a/index.html
+++ b/index.html
@@ -25,25 +25,20 @@
         <article class="tic-tac-toe-container">
             <div class="left-wing"></div>
             <section class="tic-tac-toe-grid">
-                <div class="break">
-                    <article class="g0" name="0"></article>
-                    <article class="g3" name="3"></article>
-                    <article class="g6" name="6"></article>
-                </div>
-                <div class="break">
-                    <article class="g1" name="1"></article>
-                    <article class="g4" name="4"></article>
-                    <article class="g7" name="7"></article>
-                </div>
-                <div class="break">
-                    <article class="g2" name="2"></article>
-                    <article class="g5" name="5"></article>
-                    <article class="g8" name="8"></article>
-                </div>
+                    <article class="grid" id="0"></article>
+                    <article class="grid" id="1"></article>
+                    <article class="grid" id="2"></article>
+                    <article class="grid" id="3"></article>
+                    <article class="grid" id="4"></article>
+                    <article class="grid" id="5"></article>
+                    <article class="grid" id="6"></article>
+                    <article class="grid" id="7"></article>
+                    <article class="grid" id="8"></article>
             </section>
             <div class="right-wing"></div>
         </article>
-        <script type="text/javascript" src="GAME"></script>
-        <script type="text/javascript" src="PLAYER"></script>
+        <script type="text/javascript" src="player.js"></script>
+        <script type="text/javascript" src="game.js"></script>
+        <script type="text/javascript" src="main.js"></script>
     </body>
     </html>
