--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
+        <audio id="theme" src="assets/theme.mp3"></audio>
         <article class="hud-container">
                 <section class="p1-container">
                     <p class="p1-icon">🍌</p>
                     <p class="p1-wins">0 wins</p>
                 </section>
                 <section class="message-container">
+                    <img class="header" src="assets/header.png" alt="header image">
                     <p class="message">It's 🍌's turn</p>
                 </section>
                 <section class="p2-container">
