Refactor HTML to remove nested if statement whtin updateGrid function, add theme on draw

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
-        <audio id="theme" src="assets/theme.mp3"></audio>
+        <audio id="theme-win" src="assets/theme-win.mp3"></audio>
+        <audio id="theme-draw" src="assets/theme-draw.mp3"></audio>
         <article class="hud-container">
                 <section class="p1-container">
                     <p class="p1-icon">🍌</p>
