Add audio toggle

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
-        <audio id="theme-win" src="assets/theme-win.mp3"></audio>
-        <audio id="theme-draw" src="assets/theme-draw.mp3"></audio>
+        <audio id="themeWin" src="assets/theme-win.mp3"></audio>
+        <audio id="themeDraw" src="assets/theme-draw.mp3"></audio>
         <article class="hud-container">
                 <section class="p1-container">
                     <p class="p1-icon">🍌</p>
@@ -40,6 +40,9 @@
                     <article class="grid" id="8"></article>
             </section>
             <div class="right-wing"></div>
+        </article>
+        <article class="audio-container">
+            <img class="audio-toggle" src="assets/audio-on.png" alt="audio-toggle">
         </article>
         <script type="text/javascript" src="player.js"></script>
         <script type="text/javascript" src="game.js"></script>
